# ArabicYouTubeDubber

./: .gitignore  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.c
app/src/main/java/com/example/arabicyoutubedubber/: DownloadWorker.kt  DubberApplication.kt  MainActivity.kt  YouTubeDownloader.kt
app/src/main/java/com/example/arabicyoutubedubber/transcription/: ArabicTTS.kt  AudioExtractor.kt  Translator.kt  VideoDubber.kt  WhisperLib.kt  WhisperTranscriber.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
